...
import Kingfisher

class ViewController: UIViewController {
  
  private let tableView = UITableView()
  private let searchBar = UISearchBar()
  private let loadingView = UIView()
  private let disposeBag = DisposeBag()
  let viewModel = BookViewModel()
  
  override func viewDidLoad() {
    super.viewDidLoad()
    initUI()
    setupViewModel()
  }
  
  private func initUI(){
    self.view.addSubview(tableView)
    searchBar.placeholder = "Books and more books!"
    
    searchBar.delegate = nil
    searchBar.sizeToFit()
    searchBar.showsScopeBar = true
    
    tableView.snp.makeConstraints { make in
...
